--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,30 @@
 <html>
 <head>
-
-    <link href="/chat.css" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css' />
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <link href="/yt-search.css" rel="stylesheet" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css' />
 </head>
 <body>
+<div id="blackout">
+<div id="modal">
+    <h3>Downloading</h3>
+    <div id="progress"><div></div></div>
+    <p id="video-title"></p>
+    <p class="close">Close</p>
+</div>
+</div>
 <div id="cont">
-    <input id="link" placeholder="Paste your Youtube Link Here" size="40" />
+    
 
     <form id="search-yt">
-        <p>Search Youtube</p>
-        <input type="text" id="youtube-search" placeholder="Search youtube" />
+        <input type="text" id="searchbox" placeholder="Search" autofocus />
     </form>
-        <p>Results</p>
+
         <div id="results"></div>
 </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/chat.js"></script>
-    
+    <script src="/yt-search.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
 </body>
 </html>
